Polishing SSL Names section

--- a/code/dev/parts/ssl_names/modal/validation-info-url.tpl.html
+++ b/code/dev/parts/ssl_names/modal/validation-info-url.tpl.html
@@ -9,6 +9,6 @@
     </label>
   </div>
 </div>
-<p>One you are ready with the change please click “Verify HTML Tag” button below.</p>
-<p>You can repeat the verification procedure at any time later by using <strong>“Verify Domain Control”</strong> action icon(<i class="glyphicon glyphicon-check"></i>)in the list of managed SSL names</p>
+<br><p>Once you are ready with the change please click “Verify HTML Tag” button below.</p>
+<p>You can repeat the verification procedure at any time later by using <strong>“Verify Domain Control”</strong> action icon (<i class="glyphicon glyphicon-check"></i>) in the list of managed SSL names.</p>
 </div>
