--- a/code/dev/parts/ssl_names/modal/modal-message-verification-success.tpl.html
+++ b/code/dev/parts/ssl_names/modal/modal-message-verification-success.tpl.html
@@ -4,7 +4,7 @@
 <div class="modal-body">
   <div class="modal-message-verification-success" ng-if="model.message!=='Waiting for approval'">
     <p>Thank you for validating the control of the domain name.</p>
-    <p> In about 5-7 minutes the new SSL name will be deployed in our global network and be available to serve your SSL requests (please monitor “Published Status” attribute of the new SSL name)</p>
+    <p> In about 5-7 minutes the new SSL name will be deployed in our global network and be available to serve your SSL requests (please monitor “Published Status” attribute of the new SSL name).</p>
   </div>
   <div class="modal-message-verification-success" ng-if="model.message=='Waiting for approval'">
     <p>{{model.message}}</p>
