--- a/code/dev/parts/ssl_names/modal/validation-info-dns.tpl.html
+++ b/code/dev/parts/ssl_names/modal/validation-info-dns.tpl.html
@@ -1,5 +1,5 @@
 <div class="validation-info-dns">
-  <p>Please add TXT record with value</p>
+  <p>Please add a TXT record with value</p>
   <pre class="dns-text"><strong ng-bind-html="model.data.verification_object">{{model.data.verification_object}}</strong></pre>
   <p> to one of the following DNS names:</p>
   <div class="form-group">
@@ -10,5 +10,5 @@
   </div>
 </div>
 <p>Once you are ready with the change please click “Verify TXT Record” button below.</p>
-<p>You can repeat the verification procedure at any time later by using <strong>“Verify Domain Control”</strong> action icon(<i class="glyphicon glyphicon-check"></i>)in the list of managed SSL names</p>
+<p>You can repeat the verification procedure at any time later by using <strong>“Verify Domain Control”</strong> action icon (<i class="glyphicon glyphicon-check"></i>) in the list of managed SSL names.</p>
 </div>
