--- a/code/dev/parts/ssl_names/list.html
+++ b/code/dev/parts/ssl_names/list.html
@@ -77,7 +77,7 @@
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
           </div>
           <crud-pagination></crud-pagination>
-          <table class="table">
+          <table class="table ssl-names--table ">
             <thead>
               <tr>
                 <th><a href="" ng-click="order('ssl_name')">Domain Name</a>
@@ -117,7 +117,7 @@
                 </td>
                 <td class="actions">
                   <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
-                  <a href="" ng-class="item.verified?'disabled':''"ng-disabled="item.verified" ng-if="!item.loading" uib-tooltip="Verify Domain Control" ng-click="onVerifyDomain($event,item)">
+                  <a href="" ng-class="item.verified?'disabled':''"ng-disabled="item.verified" ng-if="!item.loading" uib-tooltip="{{item.verified?'Already Verified':'Verify Domain Control'}}" ng-click="onVerifyDomain($event,item)">
                     <i class="glyphicon glyphicon-check"></i>
                   </a>
                   <a href="" ng-if="!item.loading" ng-click="deleteSSLName(item)" uib-tooltip="Delete SSL Name">
