Update SSL Names List Page - add more space between the blocks

--- a/code/dev/parts/ssl_names/modal/validation-info-url.tpl.html
+++ b/code/dev/parts/ssl_names/modal/validation-info-url.tpl.html
@@ -2,13 +2,13 @@
   <p>Please place HTML meta-tag</p>
   <pre class="meta-tag"><strong>{{model.data.verification_object}}</strong></pre>
   <p>in "&lt;head&gt;" section (right before closing “&lt;/head&gt;” statement) on index (home) page on one of the following websites:</p>
-  <div class="form-group">
+  <div class="col-sm-12 form-group">
     <!--Show radio buttons for elements in “verification_names” attribute-->
     <label for="" class="col-sm-12 label-control" ng-repeat="item in model.data.verification_names">
       <input type="radio" ng-model="model.verify.url" value="{{item}}">&nbsp;{{item}}
     </label>
   </div>
-</div>
-<br><p>Once you are ready with the change please click “Verify HTML Tag” button below.</p>
-<p>You can repeat the verification procedure at any time later by using <strong>“Verify Domain Control”</strong> action icon (<i class="glyphicon glyphicon-check"></i>) in the list of managed SSL names.</p>
+  <br>
+  <p>Once you are ready with the change please click “Verify HTML Tag” button below.</p>
+  <p>You can repeat the verification procedure at any time later by using <strong>“Verify Domain Control”</strong> action icon (<i class="glyphicon glyphicon-check"></i>) in the list of managed SSL names.</p>
 </div>
