--- a/code/dev/parts/ssl_names/modal/validation-info-dns.tpl.html
+++ b/code/dev/parts/ssl_names/modal/validation-info-dns.tpl.html
@@ -2,13 +2,14 @@
   <p>Please add a TXT record with value</p>
   <pre class="dns-text"><strong ng-bind-html="model.data.verification_object">{{model.data.verification_object}}</strong></pre>
   <p> to one of the following DNS names:</p>
-  <div class="form-group">
-    <!-- Show radio buttons for elements in “verification_names” attribute-->
-    <label for="" class="col-sm-12 label-control" ng-repeat="item in model.data.verification_names">
-      <input type="radio" ng-model="model.verify.url" value="{{item}}">&nbsp; {{item}}
-    </label>
+  <div class="row">
+    <div class="col-sm-12 form-group">
+      <!-- Show radio buttons for elements in “verification_names” attribute-->
+      <label for="" class="col-sm-12 label-control" ng-repeat="item in model.data.verification_names">
+        <input type="radio" ng-model="model.verify.url" value="{{item}}">&nbsp; {{item}}
+      </label>
+    </div>
   </div>
-</div>
-<p>Once you are ready with the change please click “Verify TXT Record” button below.</p>
-<p>You can repeat the verification procedure at any time later by using <strong>“Verify Domain Control”</strong> action icon (<i class="glyphicon glyphicon-check"></i>) in the list of managed SSL names.</p>
+  <p>Once you are ready with the change please click “Verify TXT Record” button below.</p>
+  <p>You can repeat the verification procedure at any time later by using <strong>“Verify Domain Control”</strong> action icon (<i class="glyphicon glyphicon-check"></i>) in the list of managed SSL names.</p>
 </div>
