Add different title colors for modal windows (SLL Names)

--- a/code/dev/parts/ssl_names/modal/modal-message-succes-create.tpl.html
+++ b/code/dev/parts/ssl_names/modal/modal-message-succes-create.tpl.html
@@ -1,5 +1,5 @@
-<div class="modal-header">
-  <h3 class="modal-title">Success</h3>
+<div class="modal-header modal-header--success">
+  <h3 class="modal-title modal-title--success">Success</h3>
 </div>
 <div class="modal-body">
   <div class="modal-message-succes-create">
