--- a/code/dev/parts/ssl_names/modal/modal-message-verification-error.tpl.html
+++ b/code/dev/parts/ssl_names/modal/modal-message-verification-error.tpl.html
@@ -1,5 +1,5 @@
-<div class="modal-header">
-  <h3 class="modal-title">Error</h3>
+<div class="modal-header modal-header--error">
+  <h3 class="modal-title modal-title--error">Error</h3>
 </div>
 <div class="modal-body">
   <div class="modal-message-verification-error" ng-if="!model.error">
