Create new validation directive 'validate-domain-name-regular-or-wildcard'

--- a/code/dev/parts/shared/error-messages.html
+++ b/code/dev/parts/shared/error-messages.html
@@ -27,3 +27,5 @@
 <div ng-message="caching-rule-header-value" class="alert-text alert-text--caching-rule-header-value">Incorrect header-value</div>
 <div ng-message="origin-server-name" class="alert-text alert-text--origin-server-name">Please specify either correct domain name or IPv4 address</div>
 <div ng-message="pattern-no-special-chars" class="alert-text alert-text--no-special-chars">Special characters are not allowed</div>
+<!-- message for validate-wildcard-domain-field  -->
+<div ng-message="domain-name-regular-or-wildcard" class="alert-text alert-text--wildcard-domain-field">Incorrect wildcard or domain name format</div>
