Polishing SSL Names section

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -76,11 +76,11 @@
                     Domains
                 </a>
                 <a id="side-menu-sub-item__webApp-ssl_certs"  ui-sref-active="active" ui-sref="index.webApp.ssl_certs" class="side-menu-sub-item">
-                    <i class="sub-menu-icon fa fa-lock"></i>
+                    <i class="sub-menu-icon fa fa-certificate"></i>
                     SSL Certificates
                 </a>
                 <a id="side-menu-sub-item__webApp-ssl_names"  ui-sref-active="active" ui-sref="index.webApp.ssl_names" class="side-menu-sub-item">
-                    <i class="sub-menu-icon fa fa-unlock-alt"></i>
+                    <i class="sub-menu-icon fa fa-lock"></i>
                     SSL Names
                 </a>
                 <a id="side-menu-sub-item__webApp-staging-environment"  ui-sref-active="active" ui-sref="index.webApp.staging-environment" class="side-menu-sub-item">
