--- a/code/dev/parts/ssl_names/list.html
+++ b/code/dev/parts/ssl_names/list.html
@@ -64,7 +64,7 @@
         </div>
         <div class="panel-body">
           <div class="alert alert-info" ng-if="records.length == 0 && !_loading">
-            Currently you don't have any SSL names registered in the system. You can click on "Add New SSL Name" button above to add an SSL certificate.
+            Currently you don't have any SSL names registered in the system. You can click on "Add New SSL Name" button above to add an SSL name.
           </div>
           <div class="alert alert-info" ng-if="_loading">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
