Add functionality for show more details about a events on line chart

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -75,8 +75,8 @@
 <script type="text/javascript" src="bower_components/moment/min/moment.min.js"></script>
 
 
-<!-- TODO: try to use <script type="text/javascript" src="bower_components/highcharts/highstock.src.js"></script> -->
-<script type="text/javascript" src="bower_components/highcharts/highcharts.js"></script>
+<script type="text/javascript" src="bower_components/highcharts/highstock.src.js"></script>
+<!-- <script type="text/javascript" src="bower_components/highcharts/highcharts.js"></script> -->
 <script type="text/javascript" src="bower_components/highcharts/modules/map.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/highcharts-3d.js"></script>
 <script type="text/javascript" src="bower_components/highcharts/highcharts-more.js"></script>
@@ -298,6 +298,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/reports/service/d3ChartHelper.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/service/chartColorService.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/service/pieChartHelper.factory.js"></script>
+<script type="text/javascript" src="js/portal/reports/service/eventsSerieDataService.factory.js"></script>
 <script type="text/javascript" src="js/portal/reports/service/reports-filter.service.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/timePeriods.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/filter/filterTopObjects.directive.js"></script>
