Set max date for Date Picker widget

--- a/code/dev/parts/reports/filters/time-period.html
+++ b/code/dev/parts/reports/filters/time-period.html
@@ -13,6 +13,8 @@
             date-range-picker=""
             ng-model="datePicker.date"
             options="::datePicker.options"
+            min="datePicker.minDate"
+            max="datePicker.maxDate"
             class="form-control date-picker select2"
             type="text"
             />
