dashboards, highmap memory leaks removed, second try

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -98,7 +98,8 @@
 <script type="text/javascript" src="bower_components/angular-intro.js/build/angular-intro.min.js"></script>
 <script type="text/javascript" src='bower_components/Sortable/Sortable.min.js'></script>
 <script type="text/javascript" src='bower_components/Sortable/ng-sortable.js'></script>
-<script type="text/javascript" src='bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.js'></script>
+<!-- <script type="text/javascript" src='bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.js'></script> -->
+<script type="text/javascript" src='bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.js'></script>
 
 <script type="text/javascript" src="bower_components/ngstorage/ngStorage.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-base64/angular-base64.min.js"></script>
