--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -118,7 +118,6 @@
 <script type="text/javascript" src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
 <script type="text/javascript" src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.templates.js"></script>
 <script type="text/javascript" src="bower_components/angular-moment/angular-moment.min.js"></script>
-<script type="text/javascript" src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-datatables/dist/angular-datatables.min.js"></script>
 <script type="text/javascript" src="bower_components/angular-datatables/dist/plugins/bootstrap/angular-datatables.bootstrap.min.js"></script>
 <script type="text/javascript" src="bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
@@ -138,6 +137,7 @@
 <script type="text/javascript" src="bower_components/angular-object-diff/dist/angular-object-diff.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
+<script type="text/javascript" src="widgets/adf-widget-analytics-proxy-traffic/dist/adf-widget-analytics-proxy-traffic.js"></script>
 <!-- endbuild -->
 
 <script src="config.js"></script>
