--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -137,7 +137,7 @@
 <script type="text/javascript" src="bower_components/angular-object-diff/dist/angular-object-diff.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.us.js"></script>
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
-<script type="text/javascript" src="widgets/adf-widget-analytics-proxy-traffic/dist/adf-widget-analytics-proxy-traffic.js"></script>
+<!-- <script type="text/javascript" src="widgets/adf-widget-analytics-proxy-traffic/dist/adf-widget-analytics-proxy-traffic.js"></script> -->
 <!-- endbuild -->
 
 <script src="config.js"></script>
@@ -389,6 +389,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/http-https-request-ratio/widgetHTTPHTTPSRequestsRatio.controller.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/http-status-codes-ratio/widgetHTTPStatusCodesRatio.config.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/widgets/web-analytics/http-status-codes-ratio/widgetHTTPStatusCodesRatio.controller.js"></script>
+<script type="text/javascript" src="widgets/adf-widget-analytics-proxy-traffic/dist/adf-widget-analytics-proxy-traffic.js"></script>
 
 <!-- //Web Analytic -->
 <!-- BlueTriangleTech -->
