web analytics, proxy traffic, lastmile rtt added, stage zero

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -318,6 +318,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/reports/chart/fbtAverageChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/chart/fbtDistributionChart.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/chart/fbtHeatmapChart.directive.js"></script>
+<script type="text/javascript" src="js/portal/reports/chart/lmRTTChart.directive.js"></script>
 
 <script type="text/javascript" src="js/portal/reports/top/topRequests.directive.js"></script>
 <script type="text/javascript" src="js/portal/reports/top/topCacheMiss.directive.js"></script>
