--- a/code/dev/parts/reports/proxy.html
+++ b/code/dev/parts/reports/proxy.html
@@ -92,6 +92,17 @@
             </div>
           </div>
 
+          <div class="row">
+            <div class="col-lg-12">
+              <div lm-rtt-chart
+                   fl-os="os"
+                   fl-device="device"
+                   fl-browser="browser"
+                   fl-country="country"
+                   ng-domain="domain"></div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
