web analytics, proxy traffic, some improvements, not finished

--- a/code/dev/parts/reports/charts/traffic-common.html
+++ b/code/dev/parts/reports/charts/traffic-common.html
@@ -1,4 +1,4 @@
-<h3 class="reports_charts_title">Last Mile Round Trip Time Latency</h3>
+<h3 class="reports_charts_title">{{ heading }}</h3>
 <div filter-time-periods
      ng-disabled="!ngDomain"
      fl-os="flOs"
