Create new module 'dns_zones'

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -198,6 +198,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/resources/model/cache.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/stats.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/countries.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/dns_zones.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/activity.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/2fa.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/keys.factory.js"></script>
@@ -404,6 +405,11 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/logshippers/controller/logshippers.controller.js"></script>
 <script type="text/javascript" src="js/portal/logshippers/logshippers-staging-status/logshippersStagingStatus.directive.js"></script>
 <!-- // LogShippers -->
+<!-- DNS Zones -->
+<script type="text/javascript" src="js/portal/dns_zones/dns_zones.module.js"></script>
+<script type="text/javascript" src="js/portal/dns_zones/dns_zones.routes.js"></script>
+<script type="text/javascript" src="js/portal/dns_zones/controller/dns_zonesCrud.controller.js"></script>
+ <!-- //DNS Zones -->
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
 <script type="text/javascript" src="js/portal/app.routes.js"></script>
