--- a/code/dev/parts/dns_zones/list.html
+++ b/code/dev/parts/dns_zones/list.html
@@ -42,7 +42,7 @@
   <div class="row">
     <div class="col-sm-12">
       <h2 class="pull-left page-title">
-        SSL Certificates List
+        DNS Zones List
       </h2>
     </div>
   </div>
