Create new modules for DNS Zone

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -198,6 +198,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/resources/model/cache.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/stats.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/countries.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/dns_zone_records.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/dns_zones.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/activity.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/2fa.factory.js"></script>
@@ -405,6 +406,11 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/logshippers/controller/logshippers.controller.js"></script>
 <script type="text/javascript" src="js/portal/logshippers/logshippers-staging-status/logshippersStagingStatus.directive.js"></script>
 <!-- // LogShippers -->
+<!-- DNS Zone Records -->
+<script type="text/javascript" src="js/portal/dns_zone_records/dns_zone_records.module.js"></script>
+<script type="text/javascript" src="js/portal/dns_zone_records/dns_zone_records.routes.js"></script>
+<script type="text/javascript" src="js/portal/dns_zone_records/controller/dns_zone_recordsCrud.controller.js"></script>
+<!-- //DNS Zone Records -->
 <!-- DNS Zones -->
 <script type="text/javascript" src="js/portal/dns_zones/dns_zones.module.js"></script>
 <script type="text/javascript" src="js/portal/dns_zones/dns_zones.routes.js"></script>
