--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -152,7 +152,7 @@
                 </a>
                 <a ui-sref-active="active" ui-sref="index.dnsServices.dns_zones" class="side-menu-sub-item" ng-if="!userService.isUser()">
                     <i class="sub-menu-icon fa fa-tasks"></i>
-                    DNS zones
+                    DNS Zones
                 </a>
                 <!-- TODO: delete style color: gerey after release module-->
                 <a ui-sref-active="active" style="color:grey" uisref="index.dnsServices.dns_monitors" class="side-menu-sub-item" ng-if="!userService.isUser()">
